--- a/index.css
+++ b/index.css
@@ -147,6 +147,7 @@ body {
     width: 100%;
     max-height: 150px;
     overflow-y: scroll;
+    scroll-behavior: smooth;
     /* display: block; */
     background-color: var(--secondary-color);
 }
@@ -242,7 +243,7 @@ body {
 
 .daysCentraleContainer {
     display: flex;
-    max-width: 65%;
+    max-width: 80%;
     align-content: center;
     position: absolute;
     top: 50%;
@@ -259,6 +260,10 @@ body {
 .daysCentraleContainer * {
     text-align: center;
     height: auto;
+}
+
+.daysCentraleContainer p{
+    max-width: 250px;
 }
 
 #keepScrol {
@@ -291,6 +296,25 @@ body {
     border: none;
     display: none;
     z-index: 4;
+
+    animation-name: pressure;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-direction: alternate-reverse;
+}
+
+
+@keyframes pressure {
+    0% {
+        width: 72px;
+        height: 72px;
+    }
+    
+    25% {
+        width: 56px;
+        height: 56px;
+    }
 }
 
 .overlayContent {
