--- a/index.css
+++ b/index.css
@@ -145,7 +145,7 @@ body {
 
 .dropdown-menu {
     width: 100%;
-    max-height: 150px;
+    max-height: 50vh;
     overflow-y: scroll;
     scroll-behavior: smooth;
     /* display: block; */
@@ -182,6 +182,11 @@ body {
     position: absolute;
     bottom: 24px;
     right: 16px;
+}
+
+#accessStatBtn{
+    right: 50%;
+    transform: translateX(50%);
 }
 
 .squareTag {
